# MIPS-

./: CMakeLists.txt  clang23.sh  memory_test.cpp  report.md  test.asm  test_program.asm
src/: assembler.cpp  assembler.h  cpu_instructions.cpp  debug_main.cpp  debugger.cpp  debugger.h  main.cpp  mips_assemble.cpp  mips_core.cpp  mips_core.h  mips_execute.cpp  mips_interpret.cpp
tests/: catch2.hpp  test_assembler.cpp  test_binary_format.cpp  test_cpu.cpp  test_main.cpp  test_utilities.cpp
